# etpgrf-site

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  ETPGRF_SPECS.md  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
.gitea/workflows/: docker-publish.yaml
config/nginx/: etpgrf--external-nginx.conf  etpgrf--internal-nginx.conf
data/: README.md
etpgrf_site/: __init__.py  manage.py
etpgrf_site/blog/: admin.py  apps.py  models.py  sitemaps.py  urls.py  views.py
etpgrf_site/blog/migrations/: 0001_initial.py  0002_alter_post_is_published_alter_post_post_type_and_more.py  0003_alter_post_excerpt.py  0004_post_updated_at.py  0005_alter_post_slug.py
etpgrf_site/blog/templates/blog/: page_detail.html  post_detail.html  post_list.html  tmp.html
etpgrf_site/etpgrf/: hyphenation.py
etpgrf_site/etpgrf_site/: asgi.py  settings.py  urls.py  wsgi.py
etpgrf_site/typograph/: admin.py  apps.py  models.py  urls.py  views.py
etpgrf_site/typograph/migrations/: 0001_initial.py  0002_dailystat_copy_count.py  0003_dailystat_chars_copied.py
etpgrf_site/typograph/templates/: 404.html  500.html
etpgrf_site/typograph/templates/typograph/: 403.html  base.html  index.html  result_fragment.html  stats_summary.html
etpgrf_site/typograph/templatetags/: typograph_extras.py
frontend-assembly/: assembly_via_npm.sh  package.json
frontend-assembly/src/: editor.js
media/: README.md
public/static/: 502.html  503.html  504.html  llms.txt  robots.txt  site.webmanifest
public/static/codemirror/: editor.js
public/static/css/: etpgrf.css
public/static/js/: base.js  index.js
tmp-frontend/: package-lock.json
