[tool.poetry]
name = "2026-etpgrf-site"
version = "0.1.0"
description = ""
authors = ["erjemin <erjemin@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
django = "^6.0"
gunicorn = "^23.0.0"
python-dotenv = "^1.2.1"
etpgrf = "^0.1.3"
# lxml = "^5.1" # etpgrf подтянет как зависимость
# beautifulsoup4 = "^4.12" # etpgrf подтянет как зависимость
# regex = "^2023.12" # и это тоже

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
